[package]
name = "cloud-plugin"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[workspace.package]
version = "0.6.1"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2.24", features = ["derive", "env"] }
cloud = { path = "crates/cloud" }
cloud-openapi = { workspace = true }
comfy-table = "7"
dirs = "5.0"
dialoguer = "0.10"
lazy_static = "1.4.0"
oci-distribution = { git = "https://github.com/fermyon/oci-distribution", rev = "63cbb0925775e0c9c870195cad1d50ac8707a264" }
tokio = { version = "1.23", features = ["full"] }
tracing = { workspace = true }
rand = "0.8"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["stream"] }
rpassword = "7.0"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
sha2 = "0.10.2"
spin-common = { git = "https://github.com/fermyon/spin", rev = "4ca3a56153a1d85b176ffd05804a476a59deb4ea" }
spin-loader = { git = "https://github.com/fermyon/spin", rev = "4ca3a56153a1d85b176ffd05804a476a59deb4ea" }
spin-locked-app = { git = "https://github.com/fermyon/spin", rev = "4ca3a56153a1d85b176ffd05804a476a59deb4ea" }
spin-http = { git = "https://github.com/fermyon/spin", rev = "4ca3a56153a1d85b176ffd05804a476a59deb4ea", default-features = false }
spin-manifest = { git = "https://github.com/fermyon/spin", rev = "4ca3a56153a1d85b176ffd05804a476a59deb4ea" }
spin-oci = { git = "https://github.com/fermyon/spin", rev = "4ca3a56153a1d85b176ffd05804a476a59deb4ea" }
terminal = { git = "https://github.com/fermyon/spin", rev = "4ca3a56153a1d85b176ffd05804a476a59deb4ea" }
tempfile = "3.3.0"
url = { version = "2.3", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
env_logger = "0.10.1"

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }

[workspace.dependencies]
tracing = { version = "0.1", features = ["log"] }
cloud-openapi = { git = "https://github.com/fermyon/cloud-openapi", rev = "a461b586e35a0175810d6da80a8e8ffeb2d517a4" }

[build-dependencies]
vergen = { version = "^8.2.1", default-features = false, features = [
  "build",
  "git",
  "gitcl",
  "cargo",
] }

[dev-dependencies]
mockall = "0.11"
cloud = { path = "crates/cloud", features = ["mocks"] }
