[package]
name = "cloud-plugin"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[workspace.package]
version = "0.11.0"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2.24", features = ["derive", "env"] }
cloud = { path = "crates/cloud" }
cloud-openapi = { workspace = true }
comfy-table = "7"
dirs = "5.0"
dialoguer = "0.10"
lazy_static = "1.4.0"
oci-distribution = { git = "https://github.com/fermyon/oci-distribution", rev = "7b291a39f74d1a3c9499d934a56cae6580fc8e37" }
tokio = { version = "1.23", features = ["full"] }
tracing = { workspace = true }
rand = "0.8"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["stream"] }
rpassword = "7.0"
semver = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.2"
spin-common = { git = "https://github.com/spinframework/spin", rev = "1d68c9d3788067be9116f11944ed0ca38d415c81" }
spin-loader = { git = "https://github.com/spinframework/spin", rev = "1d68c9d3788067be9116f11944ed0ca38d415c81" }
spin-locked-app = { git = "https://github.com/spinframework/spin", rev = "1d68c9d3788067be9116f11944ed0ca38d415c81" }
spin-http = { git = "https://github.com/spinframework/spin", rev = "1d68c9d3788067be9116f11944ed0ca38d415c81", default-features = false }
spin-manifest = { git = "https://github.com/spinframework/spin", rev = "1d68c9d3788067be9116f11944ed0ca38d415c81" }
spin-oci = { git = "https://github.com/spinframework/spin", rev = "1d68c9d3788067be9116f11944ed0ca38d415c81" }
terminal = { git = "https://github.com/spinframework/spin", rev = "1d68c9d3788067be9116f11944ed0ca38d415c81" }
tempfile = "3.3.0"
url = { version = "2.3", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
env_logger = "0.10.1"

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }

[workspace.dependencies]
tracing = { version = "0.1", features = ["log"] }
cloud-openapi = { git = "https://github.com/fermyon/cloud-openapi", rev = "b6549ceb60cb329ce994d05f725a6a0b26287bca" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
vergen = { version = "^8.2.1", default-features = false, features = [
  "build",
  "git",
  "gitcl",
  "cargo",
] }

[dev-dependencies]
mockall = "0.11"
cloud = { path = "crates/cloud", features = ["mocks"] }
