[package]
name = "cloud"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0"
cloud-openapi = { git = "https://github.com/kate-goldenring/cloud-openapi", rev = "5b02f49d8e78c4c246224bdc6b7cdb88c5747758" }
mime_guess = { version = "2.0" }
reqwest = { version = "0.11", features = ["stream"] }
semver = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tracing = { workspace = true }
uuid = "1"
